Closed Bug 1808104 Opened 3 years ago Closed 3 years ago

Firefox display broken, shows boxes and hieroglyphics (GeForce 8800 GTS with mesa/nouveau has become qualified for HW WR)

Categories

(Core :: Graphics, defect)

Firefox 108
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- wontfix
firefox109 --- fixed
firefox110 --- fixed

People

(Reporter: electron_builder-4, Assigned: aosmond)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: correctness, regression)

Attachments

(3 files)

Attached image firefox_108_broken.jpg

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36

Steps to reproduce:

Running Ubuntu 20.04.5 LTS, Lubuntu, with LXQt version 0.14.1.
Had been using Firefox 107 with no problems. Then the system auto-updated to 108.0.1.
This required me to restart Firefox. It didn't work, as described below. Then I removed the profile and tried again. Same thing.
Apparently installing version 108 on this system is enough to reproduce this problem.

Actual results:

Window consists of large black or white boxes. What text there is appears as hieroglyphics. The display changes erratically, so I was unable to capture the corrupted fonts.

Expected results:

Should have been startup window for version 108.0.1.

I don't know how to obtain the browser's user agent string when it is this broken.

The Bugbug bot thinks this bug should belong to the 'Core::Graphics' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Graphics
Product: Firefox → Core

Thanks for the report!
Please try to find a regression range, if there is one:
$ pip3 install mozregression
$ ~/.local/bin/mozregression --good 106 --bad 108 -a https://mozilla.org

Please open about:support in an unaffected build, click on "Copy text to clipboard" and paste it here.

OS: Unspecified → Linux
Hardware: Unspecified → x86_64

Not sure if the above captured the output of mozregression (a very impressive tool!)
At the end of the run, mozregression reported:
8:01.14 INFO: Last good revision: d912bdff0f6ef7ebe29020b962a818d0d7d4aaad
8:01.14 INFO: First bad revision: adbac17a6db3ee8ff5bbed67dfe7897f5e04c192

I appreciate your efforts, and Mozilla's software style! Very refreshing!

Thanks!

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d912bdff0f6ef7ebe29020b962a818d0d7d4aaad&tochange=adbac17a6db3ee8ff5bbed67dfe7897f5e04c192

adbac17a6db3ee8ff5bbed67dfe7897f5e04c192 Andrew Osmond — Bug 1794722 - Part 3. Remove all uses of GfxInfo::GetWebRenderEnabled. r=jrmuizel,webcompat-reviewers,twisniewski
f518d5630dee70e46477bd8a61407a6438adf154 Andrew Osmond — Bug 1794722 - Part 2. Remove all uses of gfxVars::UseWebRender(). r=jrmuizel,media-playback-reviewers,alwu
f0dd55319351336090da268b2ff2c2b4be7cc065 Andrew Osmond — Bug 1794722 - Part 1. Remove WebRender from the GfxInfo allowlist. r=jrmuizel

DeviceFamily::NvidiaRolloutWebRender has been removed, DeviceFamily::All is now qualified by default.

WebGL 1 Driver Version: 3.3 (Compatibility Profile) Mesa 21.2.6

WebGL 2 Driver Renderer: WebGL creation failed: * WebGL 2 requires support for the following features: transform_feedback2 (FEATURE_FAILURE_WEBGL2_OCCL)

Description: NV50
Vendor ID: 0x10de
Device ID: 0x0193
Driver Vendor: mesa/nouveau
Driver Version: 21.2.6.0

https://pci-ids.ucw.cz/read/PC/10de/0193

G80 [GeForce 8800 GTS]

https://www.techpowerup.com/gpu-specs/geforce-8800-gts-512.c758

Release Date Dec 11th, 2007
OpenGL 3.3

Blocks: wr-linux
Regressed by: 1794722
Summary: Firefox display broken, shows boxes and hieroglyphics → Firefox display broken, shows boxes and hieroglyphics (GeForce 8800 GTS with mesa/nouveau has become qualified for HW WR)

You can fix your Firefox by adding

user_pref("gfx.webrender.software", true);

to ~/.mozilla/firefox/<your_profile>/prefs.js.

:aosmond, since you are the author of the regressor, bug 1794722, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(aosmond)

The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Before I block HW-WR support on nouveau for this hardware, are you able to verify whether or not this works with a newer Mesa? 21.2.6 came on out in Nov 2021, whereas the most recent release is 22.3.2 came out a few days ago. It would be good if we could establish a minimum driver.

Flags: needinfo?(aosmond) → needinfo?(electron_builder-4)

Re-NI myself so this doesn't get lost.

Flags: needinfo?(aosmond)

Wait, I am just now realizing this is a really old card. I'm happy to block it. I was thinking it was a new card we hadn't allowlisted yet.

Flags: needinfo?(electron_builder-4)
Flags: needinfo?(aosmond)
Assignee: nobody → aosmond
Severity: -- → S3
Status: NEW → ASSIGNED

Darkspirit's advice to add:
user_pref("gfx.webrender.software", true);
to ~/.mozilla/firefox/<your_profile>/prefs.js.
allowed Firefox 108.0.1 to work in my system. Actually the file that needed edit was
~/.mozilla/firefox/3suwn3h2.default-release-1/prefs.js
Thank you very much for this!

Andrew Osmond suggested updating mesa from 21.2.6 to 22.3.2.
I am hesitant to try this for several reasons:

  1. 21.2.6 is the latest driver supplied with Ubuntu/lubuntu 20.04. The system is fully updated.
  2. I'm not sure how to update a video driver outside the normal update process.
  3. I've had bad experiences with broken nouveau/nvidia drivers on my previous system.. I worry that updating this driver will break my system.
  4. Don't know how to back out a broken display driver without first making a copy of my hard drive or doing a complete reinstall.

We already block these devices on Windows. They are quite old and appear
to be broken on Linux.

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3c0e39c86c8e Block NVIDIA early Tesla, C67 and C68 on Linux. r=gfx-reviewers,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch

The patch landed in nightly and beta is affected.
:aosmond, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox109 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(aosmond)

Comment on attachment 9310528 [details]
Bug 1808104 - Block NVIDIA early Tesla, C67 and C68 on Linux.

Beta/Release Uplift Approval Request

  • User impact if declined: Linux users with specific older gen NVIDIA graphic cards will see rendering glitches
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky):
  • String changes made/needed:
  • Is Android affected?: No
Flags: needinfo?(aosmond)
Attachment #9310528 - Flags: approval-mozilla-beta?

Comment on attachment 9310528 [details]
Bug 1808104 - Block NVIDIA early Tesla, C67 and C68 on Linux.

Approved for 109.0rc1.

Attachment #9310528 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: