Bug 1808104 - Block NVIDIA early Tesla, C67 and C68 on Linux. r=gfx-reviewers,jrmuizel a=RyanVM

We already block these devices on Windows. They are quite old and appear
to be broken on Linux.

Differential Revision: https://phabricator.services.mozilla.com/D165887